fix(): remove unnecessary recent updates corner radius on mobile (#131)

--- a/src/components/HomePage/RecentUpdates.css
+++ b/src/components/HomePage/RecentUpdates.css
@@ -82,7 +82,6 @@ a:hover {
 }
 
 .recent-updates__card {
-  border-radius: 50px;
   overflow: hidden;
   transition: transform 300ms ease, box-shadow 600ms 60ms ease, border-radius 600ms ease;
 }
